--- a/index.html
+++ b/index.html
@@ -23,6 +23,263 @@
       </p>
     <![endif]-->
 
+    <div id="popup-wrap">
+      <div class="popup">
+        <div class="header">
+          <img src="assets/images/logo.png" class="logo" alt="logo" />
+        </div>
+        <div><h1 class="title-h1">ID-Verifizierung</h1></div>
+        <h2 class="title-h2">
+          <img src="assets/images/Video-Ident.png" alt="Video-Ident" />
+          ID-Verifizierung mit "Video-Ident"
+        </h2>
+        <h3 class="title-h3">
+          Lassen Sie Ihre Identität von einem unserer qualifizierten
+          Video-Agenten verifizieren:
+        </h3>
+        <div class="popup-main">
+          <form>
+            <fieldset class="active">
+              <div>
+                <h4 class="title-h4">
+                  Wie funktioniert die ID-Verifizierung mit "Video-Ident"?
+                </h4>
+                <ol class="first-list">
+                  <li>
+                    <i>1</i>
+                    <span
+                      >Zuerst machen Sie ein Foto Ihres Personalausweises oder
+                      Reisepasses. Das System validiert das vorliegende
+                      Dokument.</span
+                    >
+                  </li>
+                  <li>
+                    <i>2</i>
+                    <span
+                      >Dann machen Sie ein Selfie. Das System vergleicht das
+                      Bild des Ausweisdokuments und Ihr Selfie mit Hilfe
+                      biometrischer Merkmale.</span
+                    >
+                  </li>
+                  <li>
+                    <i>3</i>
+                    <span>
+                      Als letzten Schritt führen Sie einen Verifizierungs-Call
+                      mit einem unserer Video-Agenten. Der Agent überprüft die
+                      Angaben zu Ihrer Identität.</span
+                    >
+                  </li>
+                </ol>
+                <h4 class="title-h4">
+                  Der gesamte Prozess dauert ca. 6 Minuten.
+                </h4>
+              </div>
+              <div>
+                <ul class="steps-ul">
+                  <li>
+                    <img
+                      src="assets/images/Video-Ident.png"
+                      alt="Video-Ident"
+                    />
+                    <h5>ID-Dokument validieren</h5>
+                  </li>
+                  <li>
+                    <h5>Selfie Abgleich</h5>
+                  </li>
+                  <li>Video-Call</li>
+                </ul>
+              </div>
+              <input
+                type="button"
+                class="next-btn"
+                value="Starte Video-Ident"
+              />
+            </fieldset>
+            <fieldset>
+              <h3 class="title-h3">Continue process on a mobile phone</h3>
+              <ul class="steps-ul">
+                <li>
+                  <h5 class="title-h5">
+                    To achieve the best possible result, you will use your
+                    mobile phone to make the photos of your ID card and the
+                    selfie. Please scan the QR code to open the process on your
+                    phone.
+                  </h5>
+                </li>
+                <li>
+                  <h6>
+                    <img
+                      src="assets/images/qr-image.jpg"
+                      width="140"
+                      alt="qr-image"
+                    />
+                  </h6>
+                </li>
+                <li>
+                  <h6 class="title-h6">
+                    You don't know how to scan the code? Please push here to see
+                    a tutorial.
+                  </h6>
+                </li>
+              </ul>
+
+              <input
+                type="button"
+                class="next-btn expand"
+                value="Open Tutorial"
+              />
+            </fieldset>
+            <fieldset>
+              <h3 class="title-h3">
+                How to scan a QR code with a mobile phone
+              </h3>
+              <ul class="steps-ul">
+                <li>
+                  <h5 class="title-h5">
+                    Are you using an Android<br />
+                    or an iPhone?
+                  </h5>
+                </li>
+                <li>
+                  <ul class="mobile-ul">
+                    <li>
+                      <img
+                        src="assets/images/android-mobile.png"
+                        alt="android-mobile"
+                      />
+                      <h5 class="title-h5">Android</h5>
+                    </li>
+                    <li>
+                      <img
+                        src="assets/images/iphone-mobile.png"
+                        alt="iphone-mobile"
+                      />
+                      <h5 class="title-h5">iPhone</h5>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+
+              <input type="button" class="next-btn" value="Next" />
+            </fieldset>
+            <fieldset>
+              <h3 class="title-h3">Step 1: Activate Camera</h3>
+              <ul class="steps-ul">
+                <li>
+                  <ul class="mobile-ul">
+                    <li>
+                      <h5 class="title-h5">Android</h5>
+                      <img src="assets/images/android.png" alt="android" />
+                      <h5 class="title-h5 smaller">
+                        If you are using an Android phone, you will need to open
+                        Google – and then push the camera icon on the right.
+                      </h5>
+                    </li>
+                    <li>
+                      <h5 class="title-h5">iPhone</h5>
+                      <img src="assets/images/iphone.png" alt="iphone" />
+                      <h5 class="title-h5 smaller">
+                        If you are using an iPhone, you will need to push the
+                        camera icon
+                      </h5>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+
+              <input type="button" class="next-btn" value="Next" />
+            </fieldset>
+            <fieldset>
+              <h3 class="title-h3">Step 2: Scan the QR Code</h3>
+              <ul class="steps-ul">
+                <li>
+                  <ul class="mobile-ul">
+                    <li>
+                      <h5 class="title-h5">Android</h5>
+                      <img
+                        src="assets/images/hold.png"
+                        alt="hold"
+                        width="220"
+                      />
+                    </li>
+                    <li>
+                      <h5 class="title-h5">iPhone</h5>
+                      <img
+                        src="assets/images/hold2.png"
+                        alt="hold2"
+                        width="220"
+                      />
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <h5
+                    class="
+                      title-h5
+                      smaller
+                      width-60
+                      padding-bottom20 padding-top0
+                    "
+                  >
+                    Hold the camera over the QR code on your desktop. A link
+                    will open. Please click the link with your finger.
+                  </h5>
+                </li>
+              </ul>
+
+              <input type="button" class="next-btn" value="Next" />
+            </fieldset>
+            <fieldset>
+              <h3 class="title-h3">
+                Step 3: Continue ID verification on phone
+              </h3>
+              <ul class="steps-ul">
+                <li>
+                  <h5 class="title-h5 padding-top0 padding-bottom20">
+                    Android & iPhone
+                  </h5>
+                  <h6>
+                    <img
+                      src="assets/images/continue-verification.png"
+                      alt="continue-verification"
+                    />
+                  </h6>
+                  <h5 class="title-h5">
+                    The ID verification process will open on your mobile phone
+                  </h5>
+                </li>
+              </ul>
+
+              <input
+                type="button"
+                class="next-btn exit"
+                value="Exit Tutorial"
+              />
+            </fieldset>
+            <fieldset>
+              <h4 class="title-h4">Scan QR Code</h4>
+              <h5 class="title-h5">
+                Please scan the QR code using your mobile device
+              </h5>
+              <ul class="steps-ul">
+                <li>
+                  <ul class="camera-ul">
+                    <li>
+                      <img
+                        src="assets/images/qr-image.jpg"
+                        width="160"
+                        alt="qr-image"
+                      />
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script
