--- a/index2.html
+++ b/index2.html
@@ -33,21 +33,21 @@
       <div class="top-div">
         <h2 class="title-h2">
           <img src="assets/images/Video-Ident.png" alt="Video-Ident" />
-          ID-Verifizierung mit "Video-Ident"
+          ID-Verifizierung mit "Konto-Ident"
         </h2>
       </div>
       <div class="main-content">
         <form>
           <fieldset class="active">
             <h2 class="title-h2 padding-bottom20">
-              Lassen Sie Ihre Identität von einem unserer qualifizierten
-              Video-Agenten verifizieren:
+              Verifizieren Sie Ihre Identität durch eine Referenz-Überweisung
+              von Ihrem Online-Banking-Konto:
             </h2>
             <div class="color-bg">
               <div class="flex-box">
                 <div>
                   <h3 class="title-h3">
-                    Wie funktioniert die ID-Verifizierung mit "Video-Ident"?
+                    Wie funktioniert die ID-Verifizierung mit "Konto-Ident"?
                   </h3>
                   <ol class="first-list">
                     <li>
@@ -63,20 +63,21 @@
                       <span
                         >Dann machen Sie ein Selfie. Das System vergleicht das
                         Bild des Ausweisdokuments und Ihr Selfie mit Hilfe
-                        biometrischer Merkmale.</span
-                      >
+                        biometrischer Merkmale.
+                      </span>
                     </li>
                     <li>
                       <i>3</i>
                       <span>
-                        Als letzten Schritt führen Sie einen Verifizierungs-Call
-                        mit einem unserer Video-Agenten. Der Agent überprüft die
-                        Angaben zu Ihrer Identität.</span
+                        Als letzten Schritt veranlassen Sie eine
+                        Referenzüberweisung von 1 Cent von Ihrem Online-Banking
+                        Konto. Die Referenzüberweisung erfolgt durch den
+                        Dienstleister FinTecSystems GmbH aus München.</span
                       >
                     </li>
                   </ol>
                   <h4 class="title-h4">
-                    Der gesamte Prozess dauert ca. 6 Minuten.
+                    Der gesamte Prozess dauert ca. 2 Minuten.
                   </h4>
                 </div>
                 <div>
@@ -104,12 +105,12 @@
                     <li>
                       <h6>
                         <img
-                          src="assets/images/Video-Ident.png"
+                          src="assets/images/bank-account.png"
                           alt="Video-Ident"
-                          width="60"
+                          width="50"
                         />
                       </h6>
-                      <h5 class="title-h5">Video-Call</h5>
+                      <h5 class="title-h5">Referenzüberweisung</h5>
                     </li>
                   </ul>
                 </div>
@@ -175,7 +176,7 @@
                 <div class="btn-box">
                   <input
                     type="button"
-                    class="next-btn expand"
+                    class="next-btn"
                     value="Tutorial öffnen"
                   />
                 </div>
@@ -272,7 +273,7 @@
                 Schritt 3: Setzen Sie die ID-Verifizierung auf Ihrem Smartphone
                 fort
               </h3>
-              <div class="width-short">
+              <div class="width-short padding-top20">
                 <ul class="steps-ul">
                   <li>
                     <h6>
@@ -291,7 +292,7 @@
                 <div class="btn-box">
                   <input
                     type="button"
-                    class="next-btn auto-hide-btn"
+                    class="next-btn"
                     value="Beende Tutorial"
                   />
                 </div>
@@ -319,80 +320,6 @@
                 <h5 class="title-h5">
                   Bitte scannen Sie jetzt den QR-Code mit Ihrem Smartphone
                 </h5>
-              </div>
-            </div>
-          </fieldset>
-          <fieldset class="last-div">
-            <div>
-              <h2 class="title-h2">
-                <img src="assets/images/admin.png" width="50" alt="admin" />
-                Leider sind alle unsere Agenten im Gespräch.
-              </h2>
-              <h2 class="title-h2 padding-bottom20 width-60 text-center">
-                Sie wollen nicht warten, sondern jetzt die Verifizierung
-                fortsetzen? Dann bieten wir Ihnen folgende Option an:
-              </h2>
-            </div>
-            <div class="flex-box-50">
-              <div class="color-bg flex-space text-center">
-                <h3 class="title-h3">
-                  Verifizierung durch Referenzüberweisung von Ihrem
-                  Online-Banking-Konto
-                </h3>
-                <ul class="steps-ul">
-                  <li>
-                    <h6>
-                      <img
-                        src="assets/images/bank-account.png"
-                        width="100"
-                        alt="bank-account"
-                      />
-                    </h6>
-                  </li>
-                  <li>
-                    <h5 class="title-h5 smaller width-60">
-                      Verifizieren Sie Ihre Identität durch eine
-                      Referenzüberweisung von Ihrem Online-Banking-Konto. Der
-                      Vorgang dauert ca. 2 Minuten
-                    </h5>
-                  </li>
-                </ul>
-                <div class="btn-box">
-                  <input
-                    type="button"
-                    class="next-btn"
-                    value="Gehe zu Konto-Ident"
-                  />
-                </div>
-              </div>
-              <div class="color-bg flex-space text-center">
-                <h3 class="title-h3">
-                  Verifizierung durch Video-Call fortsetzen
-                </h3>
-                <ul class="steps-ul">
-                  <li>
-                    <h6>
-                      <img
-                        src="assets/images/admin.png"
-                        width="100"
-                        alt="admin"
-                      />
-                    </h6>
-                  </li>
-                  <li>
-                    <h5 class="title-h5 smaller width-60">
-                      Wir bemühen uns, Sie so bald wie möglich mit dem nächsten
-                      freien Agenten zu verbinden.
-                    </h5>
-                  </li>
-                </ul>
-                <div class="btn-box">
-                  <input
-                    type="button"
-                    class="next-btn expand"
-                    value="Tutorial öffnen"
-                  />
-                </div>
               </div>
             </div>
           </fieldset>
