--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <h1 class="title-h1">ID-Verifizierung</h1>
       <div class="top-div">
-        <h2 class="title-h2">
+        <h2 class="title-h2 text-center">
           <img src="assets/images/Video-Ident.png" alt="Video-Ident" />
           ID-Verifizierung mit "Video-Ident"
         </h2>
@@ -89,7 +89,9 @@
                           width="70"
                         />
                       </h6>
-                      <h5 class="title-h5">ID-Dokument validieren</h5>
+                      <h5 class="title-h5 padding-top0 smaller">
+                        ID-Dokument validieren
+                      </h5>
                     </li>
                     <li>
                       <h6 class="selfie">
@@ -99,7 +101,9 @@
                           height="70"
                         />
                       </h6>
-                      <h5 class="title-h5">Selfie Abgleich</h5>
+                      <h5 class="title-h5 padding-top0 smaller">
+                        Selfie Abgleich
+                      </h5>
                     </li>
                     <li>
                       <h6>
@@ -109,7 +113,7 @@
                           width="60"
                         />
                       </h6>
-                      <h5 class="title-h5">Video-Call</h5>
+                      <h5 class="title-h5 padding-top0 smaller">Video-Call</h5>
                     </li>
                   </ul>
                 </div>
@@ -175,7 +179,7 @@
                 <div class="btn-box">
                   <input
                     type="button"
-                    class="next-btn expand"
+                    class="next-btn"
                     value="Tutorial öffnen"
                   />
                 </div>
@@ -206,10 +210,12 @@
                         <div class="mr-left-50">
                           <img src="assets/images/iphone.png" alt="iphone" />
                         </div>
-                        <h5 class="title-h5 smaller">
-                          Wenn Sie ein iPhone verwenden, müssen Sie das
-                          Kamerasymbol antippen.
-                        </h5>
+                        <div class="mr-left-25">
+                          <h5 class="title-h5 smaller">
+                            Wenn Sie ein iPhone verwenden, müssen Sie das
+                            Kamerasymbol antippen.
+                          </h5>
+                        </div>
                       </li>
                     </ul>
                   </li>
@@ -324,27 +330,28 @@
           </fieldset>
           <fieldset class="last-div">
             <div>
-              <h2 class="title-h2">
+              <h2 class="title-h2 text-center">
                 <img src="assets/images/admin.png" width="50" alt="admin" />
                 Leider sind alle unsere Agenten im Gespräch.
               </h2>
-              <h2 class="title-h2 padding-bottom20 width-60 text-center">
+              <h2 class="title-h2 padding-bottom20">
                 Sie wollen nicht warten, sondern jetzt die Verifizierung
-                fortsetzen? Dann bieten wir Ihnen folgende Option an:
+                fortsetzen?<br />
+                Dann bieten wir Ihnen folgende Option an:
               </h2>
             </div>
             <div class="flex-box-50">
               <div class="color-bg flex-space text-center">
                 <h3 class="title-h3">
-                  Verifizierung durch Referenzüberweisung von Ihrem
-                  Online-Banking-Konto
+                  Verifizierung durch Referenzüberweisung<br />
+                  von Ihrem Online-Banking-Konto
                 </h3>
                 <ul class="steps-ul">
                   <li>
-                    <h6>
+                    <h6 class="pd-tb40">
                       <img
                         src="assets/images/bank-account.png"
-                        width="100"
+                        width="60"
                         alt="bank-account"
                       />
                     </h6>
@@ -352,8 +359,8 @@
                   <li>
                     <h5 class="title-h5 smaller width-60">
                       Verifizieren Sie Ihre Identität durch eine
-                      Referenzüberweisung von Ihrem Online-Banking-Konto. Der
-                      Vorgang dauert ca. 2 Minuten
+                      Referenzüberweisung von Ihrem Online-Banking-Konto.
+                      <br /><br />Der Vorgang dauert ca. 2 Minuten
                     </h5>
                   </li>
                 </ul>
@@ -367,14 +374,15 @@
               </div>
               <div class="color-bg flex-space text-center">
                 <h3 class="title-h3">
-                  Verifizierung durch Video-Call fortsetzen
+                  Verifizierung durch<br />
+                  Video-Call fortsetzen
                 </h3>
                 <ul class="steps-ul">
                   <li>
-                    <h6>
+                    <h6 class="pd-tb40">
                       <img
                         src="assets/images/admin.png"
-                        width="100"
+                        width="60"
                         alt="admin"
                       />
                     </h6>
@@ -389,8 +397,8 @@
                 <div class="btn-box">
                   <input
                     type="button"
-                    class="next-btn expand"
-                    value="Tutorial öffnen"
+                    class="next-btn"
+                    value="Auf Agenten warten"
                   />
                 </div>
               </div>
