--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
       </div>
       <h1 class="title-h1">ID-Verifizierung</h1>
       <div class="top-div">
-        <h2 class="title-h2">
+        <h2 class="title-h2 text-center">
           <img src="assets/images/Video-Ident.png" alt="Video-Ident" />
           ID-Verifizierung mit "Konto-Ident"
         </h2>
@@ -90,7 +90,9 @@
                           width="70"
                         />
                       </h6>
-                      <h5 class="title-h5">ID-Dokument validieren</h5>
+                      <h5 class="title-h5 padding-top0 smaller">
+                        ID-Dokument validieren
+                      </h5>
                     </li>
                     <li>
                       <h6 class="selfie">
@@ -100,7 +102,9 @@
                           height="70"
                         />
                       </h6>
-                      <h5 class="title-h5">Selfie Abgleich</h5>
+                      <h5 class="title-h5 padding-top0 smaller">
+                        Selfie Abgleich
+                      </h5>
                     </li>
                     <li>
                       <h6>
@@ -110,7 +114,9 @@
                           width="50"
                         />
                       </h6>
-                      <h5 class="title-h5">Referenzüberweisung</h5>
+                      <h5 class="title-h5 padding-top0 smaller">
+                        Referenzüberweisung
+                      </h5>
                     </li>
                   </ul>
                 </div>
@@ -119,7 +125,7 @@
                 <input
                   type="button"
                   class="next-btn"
-                  value="Starte Video-Ident"
+                  value="Starte Konto-Ident"
                 />
               </div>
             </div>
@@ -207,10 +213,12 @@
                         <div class="mr-left-50">
                           <img src="assets/images/iphone.png" alt="iphone" />
                         </div>
-                        <h5 class="title-h5 smaller">
-                          Wenn Sie ein iPhone verwenden, müssen Sie das
-                          Kamerasymbol antippen.
-                        </h5>
+                        <div class="mr-left-25">
+                          <h5 class="title-h5 smaller">
+                            Wenn Sie ein iPhone verwenden, müssen Sie das
+                            Kamerasymbol antippen.
+                          </h5>
+                        </div>
                       </li>
                     </ul>
                   </li>
@@ -278,8 +286,8 @@
                   <li>
                     <h6>
                       <img
-                        src="assets/images/continue-verification.png"
-                        alt="continue-verification"
+                        src="assets/images/continue-verification2.png"
+                        alt="continue-verification 2"
                         height="300"
                       />
                     </h6>
