--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="main-content">
         <form>
           <fieldset class="active">
-            <h2 class="title-h2 padding-bottom20">
+            <h2 class="title-h2 padding-bottom20 smaller">
               Lassen Sie Ihre Identität von einem unserer qualifizierten
               Video-Agenten verifizieren:
             </h2>
@@ -334,7 +334,7 @@
                 <img src="assets/images/admin.png" width="50" alt="admin" />
                 Leider sind alle unsere Agenten im Gespräch.
               </h2>
-              <h2 class="title-h2 padding-bottom20">
+              <h2 class="title-h2 padding-bottom20 smaller">
                 Sie wollen nicht warten, sondern jetzt die Verifizierung
                 fortsetzen?<br />
                 Dann bieten wir Ihnen folgende Option an:
