--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
       <div class="main-content">
         <form>
           <fieldset class="active">
-            <h2 class="title-h2 padding-bottom20">
+            <h2 class="title-h2 padding-bottom20 smaller">
               Verifizieren Sie Ihre Identität durch eine Referenz-Überweisung
               von Ihrem Online-Banking-Konto:
             </h2>
