--- a/index.html
+++ b/index.html
@@ -80,18 +80,16 @@
                   </h4>
                 </div>
                 <div>
-                  <ul class="steps-ul">
+                  <ul class="steps-ul first-step">
                     <li>
                       <h6>
                         <img
                           src="assets/images/id_card_icon.png"
                           alt="id-card"
-                          width="70"
+                          width="60"
                         />
                       </h6>
-                      <h5 class="title-h5 padding-top0 smaller">
-                        ID-Dokument validieren
-                      </h5>
+                      <h5 class="title-h5 smaller">ID-Dokument validieren</h5>
                     </li>
                     <li>
                       <h6 class="selfie">
@@ -101,9 +99,7 @@
                           height="70"
                         />
                       </h6>
-                      <h5 class="title-h5 padding-top0 smaller">
-                        Selfie Abgleich
-                      </h5>
+                      <h5 class="title-h5 smaller">Selfie Abgleich</h5>
                     </li>
                     <li>
                       <h6>
@@ -113,7 +109,7 @@
                           width="60"
                         />
                       </h6>
-                      <h5 class="title-h5 padding-top0 smaller">Video-Call</h5>
+                      <h5 class="title-h5 smaller">Video-Call</h5>
                     </li>
                   </ul>
                 </div>
@@ -331,7 +327,7 @@
           <fieldset class="last-div">
             <div>
               <h2 class="title-h2 text-center">
-                <img src="assets/images/admin.png" width="50" alt="admin" />
+                <img src="assets/images/admin.png" width="60" alt="admin" />
                 Leider sind alle unsere Agenten im Gespräch.
               </h2>
               <h2 class="title-h2 padding-bottom20 smaller">
