--- a/index2.html
+++ b/index2.html
@@ -81,18 +81,16 @@
                   </h4>
                 </div>
                 <div>
-                  <ul class="steps-ul">
+                  <ul class="steps-ul first-step">
                     <li>
                       <h6>
                         <img
                           src="assets/images/id_card_icon.png"
                           alt="id-card"
-                          width="70"
+                          width="60"
                         />
                       </h6>
-                      <h5 class="title-h5 padding-top0 smaller">
-                        ID-Dokument validieren
-                      </h5>
+                      <h5 class="title-h5 smaller">ID-Dokument validieren</h5>
                     </li>
                     <li>
                       <h6 class="selfie">
@@ -102,9 +100,7 @@
                           height="70"
                         />
                       </h6>
-                      <h5 class="title-h5 padding-top0 smaller">
-                        Selfie Abgleich
-                      </h5>
+                      <h5 class="title-h5 smaller">Selfie Abgleich</h5>
                     </li>
                     <li>
                       <h6>
@@ -114,9 +110,7 @@
                           width="50"
                         />
                       </h6>
-                      <h5 class="title-h5 padding-top0 smaller">
-                        Referenzüberweisung
-                      </h5>
+                      <h5 class="title-h5 smaller">Referenzüberweisung</h5>
                     </li>
                   </ul>
                 </div>
